	* Introspection improvements.
	* Named expression fixes.  [#833]
	* Speed up large-range copies.  [#836]
	* Add missing undo/redo for sheet display options.
	* Style the progress bar we use for menu tooltips.
	* Clean out old references to mailing list and irc.
	* Documentation updates.
	* Print using pango context from GtkPrintContext for constistency
	  between gui and non-gui.

--------------------------------------------------------------------------
Gnumeric 1.12.59

b.s.:
	* Fix long-double version of FLT.NEXTAFTER.
	* cover denormals and excessive digits for TRUNC, ROUNDDOWN,
	  ROUNDUP and ROUND.  [#770]

Morten:
	* Fix xlsx import problem with broken file.  [#763]
	* Fix ods round trip of iteration tolerance.  [#765]
	* Fix issues with long doubles in dialogs.
	* Leak fixes.
	* Fix ssconvert --export-range for pdf.  [#783]
	* Fix invisible cursor problem.  [#712]
	* Fix zoom problem.  [#707]
	* Fix further zoom problem.  [#794]

--------------------------------------------------------------------------
Gnumeric 1.12.58

Placeholder:
	* No such release.

--------------------------------------------------------------------------
Gnumeric 1.12.57

Morten:
	* Fix touchpad scrolling on Wayland.  [#678]
	* Fix ods auto-filter import problem.
	* Fix xml import and export of auto-filters.
	* Fix problem with percent-of-range auto-filters with blanks.
	* New UNIQUE function.
	* New FLT.RADIX, FLT.MIN, FLT.MAX, FLT.NEXTAFTER functions (for
	  testing).
	* New experimental --with-decimal64 for base-10 math.
	* Fix sheet resize problem.
	* Fix UI problem with redo of expression entry.  [#755]
	* Accept ad-hoc clipboard format "text/plain;charset=utf-8".  [#754]

--------------------------------------------------------------------------
Gnumeric 1.12.56

Hubert Figuière:
	* Fix tooltip problem on Wayland.

Morten:
	* FLOOR, CEILING: Improve xl compatibility.  [#703]
	* Fix dependency problems with arrays.  [#725] [#647]